# Sudoku_Solver

./: Board.cpp  Board.h  BoardWrapper.cpp  BoardWrapper.h  BruteForce.cpp  BruteForce.h  BruteForceBasicChecks.cpp  BruteForceBasicChecks.h  CMakeLists.txt  Common.cpp  Common.h  Crooks.cpp  Crooks.h  Problems.h  Solver.cpp  Solver.h  Square.cpp  Square.h  Stack.h  main.cpp
